kuber/dp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: order
  template:
    metadata:
      labels:
        app: order
    spec:
      containers:
        - name: hw22idem
          image: kisuni/hw22idem
          ports:
            - containerPort: 8000
