kuber/dp_o.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: order
  template:
    metadata:
      labels:
        app: order
    spec:
      containers:
        - name: hw32order
          image: kisuni/hw32order
          ports:
            - containerPort: 8000
